@@ -1,8 +1,8 @@
 {
-  "name" : "(1.5.12) Industry Expanded v10.0",
+  "name" : "(1.5.12) Industry Expanded v10.1",
   "picture" : "thumbnail.png",
   "id" : "",
-  "version" : "10.0",
+  "version" : "10.1",
   "supported_game_version" : "1.5.12",
   "short_description" : "An Industry Expansion Mod",
   "tags" : [],
