@@ -1,5 +1,25 @@
 ﻿############# PLANTATIONS
 
+building_vineyard_plantation = {
+	building_group = bg_vineyard_plantations
+	texture = "gfx/interface/icons/building_icons/vineyards.dds"
+	required_construction = construction_cost_low
+
+	unlocking_technologies = {
+		enclosure
+	}
+
+	city_type = farm
+	levels_per_mesh = 5
+	
+	production_method_groups = {
+		pmg_base_building_vineyard_plantation
+		pmg_auto_hauling_plantation
+		pmg_train_automation_building_vineyard_plantation
+		pmg_ownership_land_building_vineyard_plantation
+	}
+}
+
 building_coffee_plantation = {
 	building_group = bg_coffee_plantations
 	texture = "gfx/interface/icons/building_icons/coffee_plantation.dds"
